# amor-main

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
bindings/: CMakeLists.txt  amor.i
cmake/template/: AMOR_MAINConfig.cmake.in  AMOR_MAINConfigUninstall.cmake.in
cmake/ycm-modules/: BuildAMOR_API.cmake  BuildAMOR_CONFIGURATION_FILES.cmake  BuildAMOR_OPENRAVE_MODELS.cmake  BuildAMOR_YARP_DEVICES.cmake  BuildOpenRAVE.cmake  BuildROBOTICSLAB_KINEMATICS_DYNAMICS.cmake  BuildROBOTICSLAB_YARP_DEVICES.cmake
doc/: amor-main-install.md
libraries/: CMakeLists.txt
libraries/AmorYarp/: CMakeLists.txt
libraries/AmorYarp/BasicCartesianControl/: BasicCartesianControl.hpp  CMakeLists.txt  DeviceDriverImpl.cpp  ICartesianControlImpl.cpp  RateThreadImpl.cpp
libraries/AmorYarp/CartesianControlClient/: CMakeLists.txt  CartesianControlClient.hpp  DeviceDriverImpl.cpp  ICartesianControlImpl.cpp
libraries/AmorYarp/CartesianControlServer/: CMakeLists.txt  CartesianControlServer.cpp  CartesianControlServer.hpp  DeviceDriverImpl.cpp
libraries/AmorYarp/YarpAmorControlboard/: CMakeLists.txt  DeviceDriverImpl.cpp  IControlLimitsImpl.cpp  IControlModeImpl.cpp  IEncodersImpl.cpp  IEncodersTimedImpl.cpp  IPosition2Impl.cpp  IPositionImpl.cpp  IVelocity2Impl.cpp  IVelocityImpl.cpp  YarpAmorControlboard.hpp
libraries/CartesianServerLib/: CMakeLists.txt  CartesianServer.cpp  xCallbackPort.h
programs/: CMakeLists.txt
programs/cartesianServer/: CMakeLists.txt  main.cpp
scripts/: amor_sensors_modifier.lua
scripts/travis/: configure-ssh.sh
share/: CMakeLists.txt
share/sensors/: CMakeLists.txt
share/sensors/scripts/: amor_sensors_modifier.lua
